--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +15,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "knex": "^3.1.0",
+    "nodemon": "^3.1.10",
     "pg": "^8.16.3"
   }
 }
